# SSG-ec-price-predictor

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
artifacts/: experiments.jsonl  model_metadata.json  serving_lookups.joblib
docs/: HANDOVER.md  architecture.md  architecture_diagram.py  automation.md  data_model_diagram.py  governance.md  limitations.md  monitoring.md
frontend/: app.py  index.html
notebooks/: 01_eda.ipynb  01_eda.py  02_appreciation_model.ipynb  02_appreciation_model.py
scripts/: ingest_data.py  init_db.sql  train_model.py
src/: config.py  database.py
src/api/: app.py  cache.py  rate_limit.py  schemas.py
src/features/: engineering.py  serving.py
src/ingestion/: ingest.py  ura_client.py
src/model/: ensemble.py  experiment.py  explain.py  predict.py  train.py
tests/: test_api.py  test_cache.py  test_circuit_breaker.py  test_experiment.py  test_features.py  test_ingestion.py  test_integration.py  test_rate_limit.py
